--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<script type="text/javascript" src="assets/javascript/bootstrap.min.js"></script>
 	<script type="text/javascript" src="assets/javascript/angular.min.js"></script>
 	<script type="text/javascript" src="assets/javascript/app.js"></script>
+	<script type="text/javascript" src="assets/javascript/products.js"></script>
 </head>
 <body ng-controller="StoreController as store">
 	<div class="container">
